# abtop

./: AGENTS.md  Cargo.toml  README.md
src/: app.rs  config.rs  host_info.rs  lib.rs  locale.rs  main.rs  snapshot.rs
src/collector/: auto_discover.rs  claude.rs  codex.rs  llama_cpp.rs  mcp.rs  mod.rs  odysseus.rs  ollama.rs  opencode.rs  vllm.rs
src/jump/: cmux.rs  iterm2.rs  mod.rs  tmux.rs
src/ui/: config.rs  footer.rs  header.rs  help.rs  mcp.rs  mod.rs  quota.rs  sessions.rs  view_menu.rs
